# vault

./: .env.example  .gitignore  ARCHITECTURE.md  DATABASE_ABSTRACTION_COMPLETE.md  DATABASE_MIGRATION.md  DEPLOYMENT.md  EXAMPLES.md  EXAMPLES.py  QUICKREF.md  README.md  TAGGING_SCHEME.md  WORKFLOW.md  pyproject.toml
scripts/: schema.sql  setup_local_postgres.py  setup_supabase.py
tests/: test_cli_add_file_input.py
vault/: __init__.py  cli.py  config.py  db.py  journal.py  mcp_server.py  models.py
vault/database/: __init__.py  base.py  factory.py  postgres_provider.py  sqlite_provider.py  supabase_provider.py
vault/embeddings/: __init__.py  bedrock.py  factory.py  google_provider.py  openai_provider.py
vault/ui/: __init__.py  server.py
vault/ui/static/: index.html
